--- a/datasets/table.hbs
+++ b/datasets/table.hbs
@@ -7,6 +7,7 @@
         <th>Publisher</th>
         <th>Dataset</th>
         <th>Extract Stage</th>
+        <th>Transform Stage</th>
         <th>Tracking</th>
         <th>Transform Status</th>
         <th>Publish Status</th>
@@ -20,6 +21,7 @@
             <td>{{info.publisher}}</td>
             <td><a href="?{{directory}}">{{info.title}}</a></td>
             <td>{{info.extract.stage}}</td>
+            <td>{{info.transform.stage}}</td>
             <td>
                 {{#if info.transform.main_issue}}
                     <a href="{{../github}}/issues/{{info.transform.main_issue}}"><img alt="GitHub issue detail" src="{{../issue_badge_base}}/{{info.transform.main_issue}}?style=plastic"></a>
