Initial 'toggle all' button.

--- a/datasets/table.hbs
+++ b/datasets/table.hbs
@@ -1,5 +1,8 @@
 <h1>{{family}} Dataset Family</h1>
 
+<button id="toggle_all" type="button" class="btn btn-outline-primary" aria-pressed="false" autocomplete="off">
+  Toggle All
+</button>
 <table id="datasets_table" class="table table-striped table-bordered">
     <thead>
     <tr>
