Fetch Jenkins job spec.json from the right URL, if available, and link to it.

--- a/datasets/table.hbs
+++ b/datasets/table.hbs
@@ -40,6 +40,9 @@
                 {{#if info.spec}}
                     <a href="{{info.spec}}"><i class="fas fa-clipboard-list"></i></a>
                 {{/if}}
+                {{#if info.jenkinsSpec}}
+                    <a href="{{info.jenkinsSpec}}"><i class="fas fa-clipboard-list"></i></a>
+                {{/if}}
                 {{#if info.flowchart}}
                     <a href="{{info.flowchart}}"><i class="fas fa-sitemap"></i></a>
                 {{/if}}
